CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

INCLUDE_DIRECTORIES(../../PublicSource/)

AUX_SOURCE_DIRECTORY(. SOURCE)

FIND_LIBRARY(GLOG_LIB libglog.a ../../PublicSource/glog/)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

ADD_LIBRARY(Client ${SOURCE})
TARGET_LINK_LIBRARIES(Client ${GLOG_LIB})
TARGET_LINK_LIBRARIES(Client pthread)